[package]
name = "rig-hn-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"